@@ -1,3 +1,11 @@
+2007-01-18  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>
+
+	* tag V00-01-01
+	* add xdaq parameter 'doFedIdCheck' to FUResourceBroker, default
+	is true, should be set to false if the processed events are known
+	not to comply with the fedIds of the real CMS detector. This is
+	e.g. the case for the eFEDs. 
+
 2007-01-17  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>
 
 	* tag V00-01-00
